# EasyRPC

./: CMakeLists.txt  README.en.md  README.md  autoRun.cmd
EasyRpcClient/: CMakeLists.txt  RpcChannel.cpp  RpcChannel.h  RpcController.cpp  RpcController.h  main.cpp
EasyRpcServer/: Authentication.cpp  Authentication.h  CMakeLists.txt  WebService.cpp  WebService.h  main.cpp
cmake/: FindHpSocket.cmake  Findprotobuf.cmake
proto/: Authentication.pb.cc  Authentication.pb.h  Authentication.proto  CMakeLists.txt  pb.bat
